# moneta

./: .gitignore  README.md  com.github.matfantinel.moneta.json  meson.build
data/: com.github.matfantinel.moneta.appdata.xml.in  com.github.matfantinel.moneta.desktop.in  com.github.matfantinel.moneta.gresource.xml  com.github.matfantinel.moneta.gschema.xml  meson.build  stylesheet-dark.css  stylesheet.css
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.matfantinel.moneta.pot  es.po  fr.po  hu.po  it.po  pt.po  ru.po  tr.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  hu.po  it.po  pt.po
src/: Application.vala  MainWindow.vala  meson.build
src/Objects/: AppSettings.vala  Currencies.vala
